entity_macros/tests/ui/attribute/conflicting-field-named-database.stderr
error: Field named database reserved for ent
 --> $DIR/conflicting-field-named-database.rs:6:5
  |
6 |     #[ent(field)]
  |     ^
